k8s/manifests/board-hub/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
    tier: backend
  ports:
    - protocol: TCP
      name: http
      port: 3001
      targetPort: 3001
    - protocol: TCP
      name: grpc
      port: 3011
      targetPort: 3011
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  selector:
    matchLabels:
      app: auth-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-service
        tier: backend
    spec:
      containers:
        - name: auth-service
          image: "ghcr.io/flo0807/hsfl-master-ai-cloud-engineering/auth-service:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
            - name: grpc
              containerPort: 3011
          volumeMounts:
            # name must match the volume name below
            - name: jwt-volume
              mountPath: /jwt-volume
              readOnly: true
      volumes:
        - name: jwt-volume
          secret:
            secretName: jwt-private-key
