k8s/manifests/board-hub/bulletin-board.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulletin-board-service
spec:
  selector:
    app: bulletin-board-service
    tier: backend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletin-board-deployment
  labels:
    app: bulletin-board-service
spec:
  selector:
    matchLabels:
      app: bulletin-board-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: bulletin-board-service
        tier: backend
    spec:
      containers:
        - name: bulletin-board-service
          image: "ghcr.io/flo0807/hsfl-master-ai-cloud-engineering/bulletin-board-service:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3002
          resources:
            limits:
              cpu: 250m
            requests:
              cpu: 100m
